libhid ChangeLog
================

2006-01-26  Charles Lepple (clepple+libhid@ghz.cc)
  - More SWIG fixes; namely, hid_interrupt_read() and hid_get_input_report().
    [288],[291]
  - Uncommented hid_get_item_value() in hid.h [291]

2006-01-22  Charles Lepple (clepple+libhid@ghz.cc)
  - Merged in SWIG changes to make the Python bindings more useful.  This
    commit also had a few extra changes to some support programs and scripts,
    but those changes were not of great consequence. [284]

2005-12-31  Charles Lepple (clepple+libhid@ghz.cc)
  - Added check for return values in hid_open() and hid_force_open() to catch
    the case where the interface is claimed, but the report descriptor cannot
    be retrieved. [276]

2005-09-02  Charles Lepple (clepple+libhid@ghz.cc)
  - Added hid_interrupt_write() and hid_set_idle() functions. [256]
  - Added usb_strerror() calls to most of the hid_exchange functions to aid in
    debugging. [256]
  - Fixed dependencies on SWIG bindings [255]
  - Patched hidparser with fix applied to NUT (affects APC UPSes) [254]
  - Misc changes to extract_report_descriptor [251],[253]

2005-07-07  Charles Lepple (clepple+libhid@ghz.cc)
  - Removed hardcoded reference to Python 2.3 and /usr/include. Pointed out by
    Martin Dengler, and patch suggested by Martin Krafft. SVN changeset: [244]
  - Fixed "sed lstat" error when compiling with distcc on OS X. [245]
  - Mark last parameter in hid_os_force_claim() as unused. [246], [247]

2005-04-26  Martin F. Krafft (libhid@pobox.madduck.net)
  - Fixed a bug in hid_exchange.c, which would prevent input record reading.
    Thanks to Benson Wang <chungyehwang@gmail.com> for pointing this out.
  - Added a new docbook.xsl path thanks to Martin Dengler
    <phidgets@xades.com>.

2005-04-19  Martin F. Krafft (libhid@pobox.madduck.net)
  - Fixed a bug in hid_preparation.c, which hardcoded the HID USB interface to
    0. Thanks to Benson Wang <chungyehwang@gmail.com> for pointing this out.
